# Room-Mode-calculator

./: .gitignore  PLAY_STORE_LISTING.md  PRIVACY_POLICY.md  README.md  pubspec.yaml  setup_signing.bat  setup_signing.sh
.github/workflows/: build.yml  release.yml
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
integration_test/: native_backend_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/audio/: tone_player.dart
lib/core/: constants.dart
lib/monetization/: ads_service.dart  monetization_providers.dart  purchase_service.dart  solve_banner.dart
lib/state/: custom_room_providers.dart  navigation_providers.dart  onboarding_providers.dart  placement_providers.dart  room_providers.dart
lib/ui/: app_theme.dart  mode_colors.dart
native/: CMakeLists.txt  README.md
native/src/api/: room_mode_solver.cpp  room_mode_solver.h
native/src/core/: cg.h  fem_assembly.h  fem_lanczos.h  fem_mesh.h  lanczos_eigensolver.h  laplacian.h  linalg.h  null_space.h  polygon.h  polygon_laplacian.h  polygon_tet_mesh.h
native/test/: test_api.cpp  test_main.cpp
test/acoustics/: mode_calculator_test.dart  note_mapping_test.dart  pressure_field_test.dart  room_ratios_test.dart  speaker_placement_test.dart  speed_of_sound_test.dart
test/geometry/: floor_area_test.dart  voxel_grid_test.dart
test/monetization/: monetization_test.dart
test/numeric/: box_modes_test.dart  floor_plan_analysis_test.dart  mode_slice_test.dart  star_room_test.dart
test/state/: center_in_world_test.dart  (+1 more)
tool/: make_icon.py
(+51 files in other folders)
